# autocomplete

./: LICENSE  README.md  pyproject.toml
src/autocomplete/: __init__.py
src/autocomplete/click_buffers/: __init__.py  click_buffer.py  noop_click_buffer.py  sqlalchemy_click_buffer.py
src/autocomplete/clients/: __init__.py  client.py
src/autocomplete/engines/: __init__.py  engine.py
src/autocomplete/factories/: __init__.py  bidirectional_score.py  cumulative_score.py  redi_search_scored.py  redis_scored.py  redis_scoreless.py  scoreless.py  sqlalchemy_scored.py  sqlalchemy_table.py
tests/: test_version.py
tests/click_buffers/: test_click_buffer.py  test_noop_click_buffer.py
tests/clients/: test_client.py
tests/engines/: test_engine.py
tests/factories/: test_cumulative_score.py  test_redis_scoreless.py  test_redis_search_scored.py  test_scoreless.py  test_sqlalchemy_scored.py  test_sqlalchemy_table.py
tests/indexer/: test_sqlalchemy_core_table_indexer.py  test_sqlalchemy_orm_table_indexer.py
tests/indexes/: test_index.py  test_redis_scored_index.py  test_redis_scoreless_index.py  test_redis_search_scored_index.py  test_sqlalchemy_scored_index.py  test_sqlalchemy_table_index.py
tests/metadata/: test_metadata_storage.py  test_null_metadata_storage.py  test_redis_metadata_storage.py
tests/normalizers/: test_lowercase_normalizer.py  test_noop_normalizer.py  test_normalizer.py
tests/prototypes/: test_cumulative_score.py  test_module_prototype.py  test_scoreless.py  test_scoreless_trie.py  test_simple_trie.py
tests/tokenizers/: test_no_split_tokenizer.py  test_noop_tokenizer.py  test_tokenizer.py  test_whitespace_tokenizer.py
(+57 files in other folders)
