[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocomplete"
dynamic = ["version"]
description = "A Python library to build autocompletion features in fast and convenient way."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Denys Horobchenko", email = "goroba.sumdu@gmail.com" },
]
keywords = ["autocomplete", "completion", "suggestions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "build>=1.0",
    "twine>=5.0",
]
redis7 = [
    "redis>=5.0,<6.0",
]
redis8 = [
    "redis>=6.0",
]
redisearch = []
sqlalchemy = [
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/goroba/autocomplete.git"
Repository = "https://github.com/goroba/autocomplete.git"
Issues = "https://github.com/goroba/autocomplete/issues"

[tool.hatch.version]
path = "src/autocomplete/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/autocomplete"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["autocomplete"]
